v1.0.0/modules/schema/pages/class/DesignLocationCU.adoc
= `DesignLocationCU`
:toclevels: 4


+++Compatible unit at a given design location.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DesignLocationCU`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`DesignLocationCU`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
DesignLocationCU {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IntegerQuantity {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CUGroup {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Design {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConditionFactor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldWorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DesignLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CompatibleUnit {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




DesignLocationCU -> IntegerQuantity: cuQuantity


DesignLocationCU -> Status: status


DesignLocationCU -> CUGroup: CUGroups


DesignLocationCU -> Design: Designs


DesignLocationCU -> ConditionFactor: ConditionFactors


DesignLocationCU -> OldWorkTask: WorkTasks


DesignLocationCU -> DesignLocation: DesignLocation


DesignLocationCU -> CompatibleUnit: CompatibleUnits


DesignLocationCU -> DiagramObject: DiagramObjects


DesignLocationCU -> InstanceSet: InstanceSet


DesignLocationCU -> Name: Names


DesignLocationCU -> ChangeSetMember: PropertiesCIMDataObject


DesignLocationCU -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<DesignLocation,`DesignLocation`>>
| 0..1
| xref::class/DesignLocation.adoc[`DesignLocation`]
| n/a

| <<cuAccount,`cuAccount`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A code that helps direct accounting (capital, expense, or accounting treatment).+++

| <<cuAction,`cuAction`>>
| 0..1
| xref::enumeration/WorkActionKind.adoc[`WorkActionKind`]
| +++A code that instructs the crew what action to perform.+++

| <<cuQuantity,`cuQuantity`>>
| 0..1
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]
| +++The quantity of the CU being assigned to this location.+++

| <<cuUsage,`cuUsage`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++As the same CU can be used for different purposes and accounting purposes, usage must be specified. Examples include: distribution, transmission, substation.+++

| <<removalDate,`removalDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Year when a CU that represents an asset is removed.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<toBeEnergised,`toBeEnergised`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if associated electrical equipment is intended to be energized while work is being performed.+++

| <<CUGroups,`CUGroups`>>
| 0..*
| xref::class/CUGroup.adoc[`CUGroup`]
| n/a

| <<CompatibleUnits,`CompatibleUnits`>>
| 0..*
| xref::class/CompatibleUnit.adoc[`CompatibleUnit`]
| n/a

| <<ConditionFactors,`ConditionFactors`>>
| 0..*
| xref::class/ConditionFactor.adoc[`ConditionFactor`]
| n/a

| <<Designs,`Designs`>>
| 0..*
| xref::class/Design.adoc[`Design`]
| n/a

| <<WorkTasks,`WorkTasks`>>
| 0..*
| xref::class/OldWorkTask.adoc[`OldWorkTask`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#CompatibleUnits]
=== `CompatibleUnits`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.CompatibleUnits`
| Cardinality
| 0..*
| Type
| xref::class/CompatibleUnit.adoc[`CompatibleUnit`]


|===

//[discrete]
[#ConditionFactors]
=== `ConditionFactors`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.ConditionFactors`
| Cardinality
| 0..*
| Type
| xref::class/ConditionFactor.adoc[`ConditionFactor`]


|===

//[discrete]
[#cuAccount]
=== `cuAccount`
+++A code that helps direct accounting (capital, expense, or accounting treatment).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.cuAccount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#cuAction]
=== `cuAction`
+++A code that instructs the crew what action to perform.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.cuAction`
| Cardinality
| 0..1
| Type
| xref::enumeration/WorkActionKind.adoc[`WorkActionKind`]


|===

//[discrete]
[#CUGroups]
=== `CUGroups`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.CUGroups`
| Cardinality
| 0..*
| Type
| xref::class/CUGroup.adoc[`CUGroup`]


|===

//[discrete]
[#cuQuantity]
=== `cuQuantity`
+++The quantity of the CU being assigned to this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.cuQuantity`
| Cardinality
| 0..1
| Type
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]


|===

//[discrete]
[#cuUsage]
=== `cuUsage`
+++As the same CU can be used for different purposes and accounting purposes, usage must be specified. Examples include: distribution, transmission, substation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.cuUsage`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DesignLocation]
=== `DesignLocation`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.DesignLocation`
| Cardinality
| 0..1
| Type
| xref::class/DesignLocation.adoc[`DesignLocation`]


|===

//[discrete]
[#Designs]
=== `Designs`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.Designs`
| Cardinality
| 0..*
| Type
| xref::class/Design.adoc[`Design`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#removalDate]
=== `removalDate`
+++Year when a CU that represents an asset is removed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.removalDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#toBeEnergised]
=== `toBeEnergised`
+++True if associated electrical equipment is intended to be energized while work is being performed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.toBeEnergised`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#WorkTasks]
=== `WorkTasks`


[cols="h,4",width=65%]
|===
| URI
| `cim:DesignLocationCU.WorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/OldWorkTask.adoc[`OldWorkTask`]


|===


